feat: チームとペアのAPIのI/F定義
